# crafting_interpreters

./: .gitignore  CMakeLists.txt  conanfile.py  setup.sh
jlox/: CMakeLists.txt  bump_alloc.cpp  bump_alloc.hpp  environment.cpp  environment.hpp  expr.hpp  expr_tests.cpp  garbage_collected_heap.cpp  garbage_collected_heap.hpp  interpreter.cpp  interpreter.hpp  log.cpp  log.hpp  main.cpp  parser.cpp  parser.hpp  print_visitor.cpp  print_visitor.hpp  scanner.cpp  scanner.hpp  stmt.hpp  tokens.cpp  tokens.hpp  utf-8.cpp  utf-8.hpp  value.hpp
jlox/detail/: heap_ptr_base.cpp  heap_ptr_base.hpp
scripts/: closure1.lox
